$Id: History,v 1.38 2001-05-15 08:43:18 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 15th, 2001       G. Cosmo - geomvol-V03-01-03
- G4AuxiliaryNavServices::CheckPointOnSurface(): added additional check to resolve
  endless looping of G4Navigator in case the track is passing through a point, edge
  or surface shared by two solids.
  This problem occured when G4Navigator was trying to transport a particle when
  exiting a solid. Transportation will now perform a few zero steps and continues
  stepping instead of looping around the same point. Fixes problem report #185.

April 27th, 2001     G. Cosmo - geomvol-V03-01-02
- G4VoxelNavigation.icc: fixed compilation warnings on HP-UX, concerning
  potential uninitialised vector elements.

April 20th, 2001     G. Cosmo - geomvol-V03-01-01
- Updated unit tests to conform to recent STL vector migration.

April 17th, 2001     G. Cosmo - geomvol-V03-01-00
- Migration to STL vector:
  o Modified classes:
    G4VoxelNavigation, G4NavigationHistory, G4BlockingList,
    G4LogicalSkinSurface, G4LogicalBorderSurface.
  o Removed GetIndex() and table-index data from G4LogicalSkinSurface
    and G4LogicalBorderSurface.
