@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ReplicaNavigation.cc,v 1.8 2001-03-09 15:32:50 gcosmo Exp $
+// $Id: G4ReplicaNavigation.cc,v 1.9 2001-05-23 17:06:48 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -331,7 +331,7 @@ G4ReplicaNavigation::DistanceToOutPhi(const G4ThreeVector &localPoint,
 	    {
 	      // Leaving immediately by starting phi
 	      //
-	      Dist=0;
+	      Dist=(compE<0) ? 0 : kInfinity;
 	    }
 	}
       else
@@ -639,12 +639,12 @@ G4ReplicaNavigation::ComputeStep(const G4ThreeVector &globalPoint,
 			localDirection);
       if (sampleStep<ourStep)
 	{
+	  if ((sampleStep == 0) && (sampleSafety<0.5*kCarTolerance))
+	    ourStep=sampleStep+kCarTolerance;
+	  else
+	    ourStep=sampleStep;
 	  exiting=true;
 	  validExitNormal=false;
-	  if (sampleStep != 0)
-	    ourStep=sampleStep;
-	  else
-	    ourStep=sampleStep+kCarTolerance;
 	}
     }
 
