@@ -1,4 +1,4 @@
-$Id: History,v 1.38 2001-05-15 08:43:18 gcosmo Exp $
+$Id: History,v 1.39 2001-05-23 17:06:48 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 23rd, 2001       G. Cosmo - geomvol-V03-01-04
+- Fixes in G4ReplicaNavigation for bug reports #253 and #254:
+  o in VoxelLocate(...), treated particular case of rotational symmetry
+    with extent over 360 degrees (courtesy of H.Boie).
+  o in DistanceToOutPhi(...), fix to correctly handle cases where the
+    starting point is on boundary of replicas and direction is along boundary.
 
 May 15th, 2001       G. Cosmo - geomvol-V03-01-03
 - G4AuxiliaryNavServices::CheckPointOnSurface(): added additional check to resolve
